<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add_note"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@android:drawable/ic_menu_edit"
    app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_note"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />
</menu>
