<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#8fc0a9">


    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_choose_the_title"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_your_notes_here"
        android:minHeight="150dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:backgroundTint="@color/customButtonColor"
        android:textColor="@color/black"
        android:onClick="onSaveNoteClick" />
</LinearLayout>
